--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" /> -->
+     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="theme-color" content="#000000" /> 
 
     <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
